--- a/_sass/_responsive-nav.scss
+++ b/_sass/_responsive-nav.scss
@@ -14,9 +14,9 @@
   display: block;
 }
 
-.nav-collapse li:nth-of-type(3) {
-  display: none;
-}
+// .nav-collapse li:nth-of-type(3) {
+//   display: none;
+// }
 
 .nav-collapse a {
   font-weight: 600;
@@ -38,7 +38,6 @@
   width: 60%;
   float: right;
   clear: both;
-  margin-top: -2rem;
 }
 
 .nav-collapse.opened {
@@ -55,12 +54,12 @@
   -o-user-select: none;
   user-select: none;
   color: white;
-  font-size: 1.25rem;
-  letter-spacing: 0.03rem;
+  font-size: 2.5rem;
   text-decoration: none;
   display: block;
-  width: 56px;
   float: right;
+  font-style: normal;
+  margin-top: 15px;
 }
 
 @media screen and (min-width: 660px) {
